<resources>
    <string name="app_name">Lori Timesheets</string>

    <!--Вход в систему-->
    <string name="sign_in_title">Вход в систему</string>
    <string name="sign_in">Войти</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="error_empty_login">Введите логин</string>
    <string name="error_empty_password">Введите пароль</string>
    <string name="error_invalid_login_or_password">Неверный логин или пароль</string>
    <string name="network_failed">Не удалось подключиться к серверу. Проверьте интернет-подключение или повторите попытку позже.</string>
    <string name="login_to_system">Выполняется вход в систему…</string>

    <!--Добавление записи -->
    <string name="project_title">Проект</string>
    <string name="task_title">Задача</string>
    <string name="duration_title">Продолжительность</string>
    <string name="description_title">Описание</string>
    <string name="hour_title">ч</string>
    <string name="minutes_title">мин</string>
    <string name="save">Сохранить</string>
    <string name="not_check">Не выбрано</string>\
    <string name="create_title">Создание</string>
    <string name="update_title">Редактирование</string>
    <string name="choose_hours">Часы:</string>
    <string name="choose_minutes">Минуты:</string>
    <string name="insert_time_entry_title">Добавление новой записи</string>
    <string name="update_time_entry_title">Изменение записи</string>
    <string name="error_duration">Неверно задана продолжительность</string>
    <string name="error_project_not_chosen">Не выбран проект</string>
    <string name="error_task_not_chosen">Не выбрана задача</string>
    <string name="getting_data">Загрузка данных…</string>
    <string name="saving_data">Сохранение информации…</string>
    <string name="number_picker_formatter">%02d</string>
    <!--Font-->
    <string name="roboto_light">sans-serif-light</string>

    <string name="title_choose_project">Выберите проект</string>
    <string name="title_choose_task">Выберите задачу</string>
    <string name="dialog_btn_cancel">Отмена</string>


    <!--Список time entry-->
    <string name="sign_out">Выйти</string>
    <string name="current_week">Выбранная неделя</string>
    <string-array name="context_menu_action">
        <item>Редактировать</item>
        <item>Удалить</item>
    </string-array>

    <!--Поиск-->
    <string name="search_title">Поиск</string>
    <string name="find">Найти</string>
    <string name="error_date">Дата начала должна быть меньше даты окончания</string>
    <string name="date_title">Дата</string>
    <string name="error_not_found">Записи не найдены</string>
    <string name="empty_field">Отсутствует</string>
    <string name="information_not_available">Информация отсутствует</string>
    <string name="find_information">Выполняется поиск…</string>


</resources>
